--- a/CarSolutioner/Forms/Menus/Admin/Sub-Forms/CambiosGenerales.resx
+++ b/CarSolutioner/Forms/Menus/Admin/Sub-Forms/CambiosGenerales.resx
@@ -144,6 +144,9 @@
   <metadata name="estadomarca.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="idmarca.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="nombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
